--- a/src/Styles/Cosmetics.css
+++ b/src/Styles/Cosmetics.css
@@ -55,7 +55,7 @@
 .price {
   font-size: 20px;
   font-weight: bold;
-  color: #2e7d32;
+  color: #00065f;
   margin-bottom: 12px;
 }
 
@@ -93,7 +93,7 @@
 
 
 .add-cart-btn {
-  background-color: #008000;
+  background-color: #00065f;
   color: white;
   border: none;
   width: 100%;
@@ -107,5 +107,5 @@
 }
 
 .add-cart-btn:hover {
-  background-color: #005f00;
+  background-color: #00065f;
 }
