--- a/src/Styles/Detergant.css
+++ b/src/Styles/Detergant.css
@@ -48,7 +48,7 @@
 .price {
   font-size: 20px;
   font-weight: bold;
-  color: #2e7d32;
+  color: #00065f;
   margin-bottom: 12px;
 }
 
@@ -81,7 +81,7 @@
 }
 
 .add-cart-btn {
-  background-color: #008000;
+  background-color: #00065f;
   color: white;
   border: none;
   width: 100%;
@@ -95,5 +95,5 @@
 }
 
 .add-cart-btn:hover {
-  background-color: #005f00;
+  background-color: #00065f;
 }
